fix: store hover was not working bc of z-index

--- a/components/Common/StoreButton.module.scss
+++ b/components/Common/StoreButton.module.scss
@@ -5,6 +5,7 @@
   animation-timing-function: ease-out;
   animation-delay: 1s;
   animation-fill-mode: both;
+  z-index: 2;
 
   &:hover {
     scale: 1.1;
